<resources>
    <string name="app_name">TestArchitectureComponents</string>
    <string name="action_back">Back</string>
    <string name="action_close">Close</string>
    <string name="action_open">Open</string>
    <string name="action_save">Save</string>
    <string name="edit_book_title">Title</string>
    <string name="edit_book_description">Description</string>
    <string name="edit_book_author">Author</string>
    <string name="edit_book_publisher">Publisher</string>
    <string name="list_books_error_no_books">You have no books</string>
    <string name="delete_book">Delete book button</string>
    <string name="nav_option_books">Books</string>
    <string name="nav_option_authors">Authors</string>
    <string name="nav_option_publishers">Publishers</string>
    <string name="nav_header_books">My Library</string>
    <string name="title_books_list">My Books</string>
    <string name="title_book_create">New Book</string>
    <string name="title_book_edit">Edit Book</string>
    <string name="title_authors_list">Authors</string>
    <string name="title_author_create">New Author</string>
    <string name="title_author_edit">Edit Author</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author_name">Name</string>
    <string name="author_age">Age</string>
    <string name="action_delete">Delete</string>
</resources>
